add Idea Cucumber Plugin template